# PlaywrightDHCWAutomationFramework

./: README.md
playwright_bdd_dhcw/: pyproject.toml
playwright_bdd_dhcw/artifacts/: behave-report.html
playwright_bdd_dhcw/src/framework/: __init__.py  pytest_plugin.py
playwright_bdd_dhcw/src/framework/base/: base_page.py
playwright_bdd_dhcw/src/framework/core/: config.py  paths.py  retrys.py
playwright_bdd_dhcw/src/playwright_bdd_fwk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
playwright_bdd_dhcw/tests/config/: qa.yaml
playwright_bdd_dhcw/tests/features/: environment.py  homepage_nav.feature
playwright_bdd_dhcw/tests/features/steps/: home_steps.py
playwright_bdd_dhcw/tests/pages/: home_page.py
