[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-bdd-fwk"
version = "0.1.0"
requires-python = ">=3.11"
description = "Reusable Playwright + Behave framework"
dependencies = [
  "behave>=1.2.6",
  "playwright>=1.45.0",
  "pydantic>=2",
  "pyyaml",
  "python-dotenv"
]

reports = [
  "allure-behave>=2.13.5",
  "behave-html-formatter>=0.9.10"
]

[tool.setuptools.packages.find]
where = ["src"]

